# JurisData

./: .gitignore  BuildServer.bat  README.md  TODO.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
Client/: CMakeLists.txt
Client/Source/: Application.cpp  Application.h  Base.h  Window.cpp  Window.h  main.cpp
Client/Source/Embed/Fonts/: RobotoMedium.inl
Scripts/: Compiler.py  SetupHooks.py
Server/: Server.py  batch_config.json
Server/Source/: ClassDiscoverer.py  Config.json  ParserEngine.py  Server.py  Spider.py  Worker.py
Server/hooks/: hook-playwright.py  runtime-hook-playwright.py
