[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Server"
version = "0.0.0"
description = "Web crawler com Scrapy e comunicação via sockets"
authors = [
    {name = "MayronDAV", email = "vasconcelosmayron@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

dependencies = [
    "Scrapy>=2.11.0",
    "Twisted>=22.10.0",
    "websockets>=11.0.3",
    "aiohttp>=3.8.4",
    "lxml>=4.9.2",
    "cssselect>=1.2.0",
    "PyInstaller>=6.15.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-twisted>=1.14.0",
]

[tool.setuptools]
packages = {find = {where = ["Server"]}}
package-dir = {"" = "Server"}

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.html", "*.xml"]