[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Server"
version = "0.1.0"
description = "Web crawler com Playwright puro e parser com lxml/parsel"
authors = [
    {name = "MayronDAV", email = "vasconcelosmayron@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

dependencies = [
    "playwright>=1.15",
    "lxml>=5.2.0",
    "parsel>=1.9.0",
    "PyInstaller>=6.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
]

[tool.setuptools]
packages = {find = {where = ["Server"]}}
package-dir = {"" = "Server"}

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.html", "*.xml"]
